[tool.poetry]
name = "node2vec"
version = "0.4.4"
description = "Implementation of the node2vec algorithm"
authors = ["elior <elior.cohen.p@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^2.5"
gensim = "^4.1.2"
numpy = "^1.19.5"
tqdm = "^4.55.1"
joblib = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
