[tool.poetry]
name = "node2vec"
version = "0.5.0"
description = "Implementation of the node2vec algorithm"
authors = ["elior <elior.cohen.p@gmail.com>"]
repository = "https://github.com/eliorc/node2vec"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^3.1.0"
gensim = "^4.3.0"
numpy = "^1.24.0"
tqdm = "^4.66.1"
joblib = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
